--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,33 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Aliese Parker</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <h1>Aliese Parker</h1>
-    <h2>Web Developer</h2>
-    <ul>
-      <li><a href="http://www.linkedin.com/in/alieseparker">Find me on linkedin</a></li>
-      <li><a href="http://www.github.com/alieseparker">Check out my github</a><li>
-    </ul>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
-
+<!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <%= image_tag("nature00487.jpg") %>
+          <div class="container">
+            <div class="carousel-caption">
+              <h2>Resume</h2>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag("wetrocks2147.jpg") %>
+          <div class="container">
+            <div class="carousel-caption">
+              <h2>Projects</h2>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag("trees01915.jpg") %>
+          <div class="container">
+            <div class="carousel-caption">
+              <h2>About Me</h2>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.carousel-inner -->
+      <div class="logo">Aliese Parker</div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
+    <!-- /.carousel -->
