--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,48 +1,81 @@
 <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-          <%= image_tag("nature00487.jpg") %>
-          <div class="container">
-            <div class="carousel-caption">
-              <h2>Resume</h2>
-              <p></p>
-            </div>
-          </div>
+================================================== -->
+<div id="myCarousel" class="carousel slide">
+
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag("nature00487.jpg") %>
+      <div class="container">
+        <div class="carousel-caption">
+          <h2>Projects</h2>
+          <p></p>
         </div>
-        <div class="item">
-          <%= image_tag("wetrocks2147.jpg") %>
-          <div class="container">
-            <div class="carousel-caption">
-              <h2>Projects</h2>
-              <p></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <%= image_tag("trees01915.jpg") %>
-          <div class="container">
-            <div class="carousel-caption">
-              <h2>About Me</h2>
-              <p></p>
-            </div>
-          </div>
-        </div>
-      </div><!-- /.carousel-inner -->
-      <div class="logo">Aliese Parker</div>
-      <!-- Controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
+      </div>
     </div>
-    <!-- /.carousel -->
+    <div class="item">
+      <%= image_tag("trees01915.jpg") %>
+      <div class="container">
+        <div class="carousel-caption">
+          <h2>About Me</h2>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <div class="logo">Aliese Parker</div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+<!-- /.carousel -->
+
+<!-- Begin page content -->
+
+<div class="container">
+  <div class="col-sm-10 col-sm-offset-1">
+    <div class="page-header text-center">
+      <h1>Aliese Parker</h1>
+    </div>
+
+    <p class="lead text-center">
+      Web Developer
+    </p>
+
+    <hr>
+
+  </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <h1>Profile</h1>
+
+      <hr>
+    <p>
+    Hi! My name is Aliese! I'm an experienced chef gone web developer.
+    </p>
+    <p>
+    This past year I have worked hard to switch careers, after a successful time in the restaurant industry, back to my first passion of programming and problem solving. I've attended classes, studied hard, and worked with teams in order to complete projects in short timeframes.
+    </p>
+    <p>
+    Working with these teams has taught me about the importance of communication, clean code, well thought out tests, and time management.
+    I am self driven and dedicated to my work. (Working as a chef for eight
+    years certainly required dedication!) I often find myself working on my
+    own projects in my extra time because I love what I do.
+    </p>
+
+      <hr>
+
+      <div class="divider"></div>
+
+    </div><!--/col-->
+</div><!--/container-->
